--- a/barbershop/.timeweb.yml
+++ b/barbershop/.timeweb.yml
@@ -20,4 +20,4 @@ beforeStart:
 
 start:
   # Команда для запуска приложения
-  - gunicorn barbershop.wsgi:application --bind 0.0.0.0:8000  # модуль WSGI
+  - gunicorn barbershop.wsgi:application --bind 0.0.0.0:8000 --log-level debug --access-logfile - --error-logfile - # модуль WSGI
