--- a/barbershop/.gitignore
+++ b/barbershop/.gitignore
@@ -9,7 +9,8 @@ local_settings.py
 *.sqlite3
 db.sqlite3
 db.sqlite3-journal
-media/
-# Кроме папок с изображениями мастеров и услуг
-!media/masters/
-!media/services/
+# Игнорировать медиа-файлы
+barbershop/media/
+# Но не игнорировать эти подкаталоги
+!barbershop/media/masters/
+!barbershop/media/services/
